--- a/api-reference/apis/video-api/imgtovideo.mdx
+++ b/api-reference/apis/video-api/imgtovideo.mdx
@@ -17,16 +17,14 @@ Generate videos from images.
 
 
 ## Request
+Make a `POST` request to below endpoint and pass the required parameters in the request body.
 
-```
+```curl curl
 --request POST 'https://modelslab.com/api/v6/video/img2video' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v6/video/img2video](https://modelslab.com/api/v6/video/img2video) endpoint and pass the required parameters in the request body.
-
-
 ## Body
-```json
+```json json
 {
     "key":"",
     "model_id":"svd",
