--- a/api-reference/apis/video-api/overview.mdx
+++ b/api-reference/apis/video-api/overview.mdx
@@ -3,34 +3,22 @@ title: "Overview"
 description: "API for generating and processing videos from text and images."
 ---
 
-<a href='https://videofusion.playground.modelslab.com'>
-<button className='custom-button'>
- Open in Playground
-</button>
-</a>
+### Endpoints
 
-### Text to Video
-Generate videos from text descriptions.
-
-![Text to Video Example](/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg)
-
-### Image to Video
-Create videos using input images as starting frames.
-
-![Image to Video Example](/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg)
-
-### Text to Video Ultra
-Generate high-resolution, HD quality videos from text prompts.
-
-![Text to Video Ultra Example](/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg)
-
-
-### Image to Video Ultra
-Create high-quality videos from images with enhanced resolution.
-
-![Image to Video Ultra Example](/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg)
-
-### Scene Maker
-Generate long-form videos with multiple scenes from structured input data.
-
-![Scene Maker Example](images/video-api/assets/images/Scene-maker-example.jpg)
+<CardGroup cols={2}>
+  <Card title="Text to Video" href="/api-reference/video-api/texttovideo" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
+    Tutorials to integrate ModelsLab APIs into your applications
+  </Card>
+  <Card title="Image to Video" href="/api-reference/video-api/imgtovideo" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+    Test models and experiment with parameters in our web interface
+  </Card>
+  <Card title="Text to video ultra" href="/api-reference/video-api/texttovideo-ultra" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
+    Get started quickly with our official SDKs for popular languages
+  </Card>
+  <Card title="Image to video ultra" href="/api-reference/video-api/imagetovideo-ultra" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+    Get started quickly with our official SDKs for popular languages
+  </Card>
+  <Card title="Scene Maker" href="/api-reference/video-api/scene-maker" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+    Get started quickly with our official SDKs for popular languages
+  </Card>
+</CardGroup>
