--- a/api-reference/apis/video-api/scene-maker.mdx
+++ b/api-reference/apis/video-api/scene-maker.mdx
@@ -16,15 +16,14 @@ Generate videos from a sequence of images.
 <video loop autoPlay muted className="w-full aspect-video rounded-lg" src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/deBMUCd6b5m3RyJkCAO7gFWFEtawP0-metaQVAxTW8zd09xMk84MnV5MFlUMGs1X3ZpZGVvLm1wNA==-.mp4" />
 
 ## Request
+Make a `POST` request to below endpoint and pass the required parameters in the request body.
 
-```
+```curl curl
 --request POST 'https://modelslab.com/api/v6/video/scene_maker' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v6/video/scene\_maker](https://modelslab.com/api/v6/video/scene_maker) endpoint and pass the required parameters in the request body.
-
 ## Body
-```json
+```json json
 {
   "key":"",
   "prompt": "a women underwater swims out just to transform into old lady",
