--- a/api-reference/apis/video-api/texttovideo-ultra.mdx
+++ b/api-reference/apis/video-api/texttovideo-ultra.mdx
@@ -15,15 +15,14 @@ Generate HD videos from text descriptions.
 <video loop mute autoPlay className="w-full aspect-video rounded-lg" src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/FWeftvb9Gi2qdTzIENBXazbTIJYbC5-metaZmJlNjI4MTEtYTFiNS00OTY4LTkzZWEtYTgwMThjN2FkZjVkLm1wNA==-.mp4" />
 
 ## Request
+Make a `POST` request to below endpoint and pass the required parameters in the request body.
 
-```
+```curl curl
 --request POST 'https://modelslab.com/api/v6/video/text2video_ultra' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v6/video/text2video\_ultra](https://modelslab.com/api/v6/video/text2video_ultra) endpoint and pass the required parameters in the request body.
-
 ## Body
-```json
+```json json
 {
      "key":"",
      "prompt":"Space Station in space",
