--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: ModelsLab Documentation
-description: "Stable Diffusion & LLM API Documentation"
+description: "Developer Guide"
 ---
 
 <img
@@ -19,6 +19,13 @@ description: "Stable Diffusion & LLM API Documentation"
 Transform your ideas into reality with ModelsLab's comprehensive AI API suite. Get up and running in minutes with our developer-first platform.
 
 <CardGroup cols={2}>
+  <Card 
+    title="API Reference" 
+    icon="code" 
+    href="/api-reference/overview"
+  >
+    Complete API documentation with examples and integration guides
+  </Card>
   <Card
     title="Interactive Playground"
     icon="play"
