--- a/api-reference/apis/voice-cloning/overview.mdx
+++ b/api-reference/apis/voice-cloning/overview.mdx
@@ -1,59 +1,40 @@
 ---
 title: "AudioGen API"
+description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-over, and many more.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-The AudioGen API provides tools for speech-to-text, text-to-speech, text-to-SFX, and voice-over, and many more.
+### Endpoints
 
-try playground now
-
-[Open in Playground 🚀](https://audiogen.modelslab.com/)
-
-***
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-* [Generate Audio from Text](/voice-cloning/text-to-audio)
-* [Text to Speech](/voice-cloning/text-to-speech)
-* [clone a voice from a target audio file](/voice-cloning/voice-to-voice)
-* [audio into written transcription](/voice-cloning/speech_to_text)
-* [Vocal Isolator](/voice-cloning/vocal-isolator)
-* [Lyrics Generator](/voice-cloning/lyrics-generator)
-* [Song Generator](/voice-cloning/song-generator)
-* [AI Dubbing](/voice-cloning/create-dubbing)
-* [Generate Voice Cover music](/voice-cloning/voice-cover)
-* [Upload Voice](/voice-cloning/upload-voice)
-* [Generate Sound Effects](/voice-cloning/sfx)
-* [Generate Music](/voice-cloning/music-gen)
-* [Upload base64 audio](/voice-cloning/base64-to-url)
-* [Get Voice List](/voice-cloning/voice-list)
-* [Fetch processing request](/voice-cloning/fetchvoice)
-
-### Text To Audio Endpoint[​](#text-to-audio-endpoint "Direct link to Text To Audio Endpoint")
-
-The Text-to-Audio endpoint enables you to generate audio by providing a text input along with a valid audio URL or a pre-created voice using a voice\_id. The output is an audio file that mimics the sound of the provided audio URL or the selected voice.
-
-### Voice to Voice Endpoint[​](#voice-to-voice-endpoint "Direct link to Voice to Voice Endpoint")
-
-The Voice-to-Voice endpoint lets you clone a voice from a target audio file.
-
-### Song Generator Endpoint[​](#song-generator-endpoint "Direct link to Song Generator Endpoint")
-
-The Voice-to-Voice endpoint lets you clone a voice from a target audio file.
-
-### Music Gen Endpoint[​](#music-gen-endpoint "Direct link to Music Gen Endpoint")
-
-The **Music Generation API** allows you to generate music based on textual prompts and optional conditioning melodies. This API is ideal for applications in music composition, sound design, and creative audio projects.
-
-### Voice Cover Endpoint[​](#voice-cover-endpoint "Direct link to Voice Cover Endpoint")
-
-The Voice Cover endpoint allows you to transform a song or audio file into a different voice using a provided model. Find all available voice models [HERE](https://modelslab.com/models/category/voice-cloning).
-
-### SFX Endpoint[​](#sfx-endpoint "Direct link to SFX Endpoint")
-
-The SFX endpoint allows you to generate sound effects (SFX) from text prompts. It takes user input in the form of a text prompt to conditionally generate audio effects.
-
-### Speech to Text Endpoint[​](#speech-to-text-endpoint "Direct link to Speech to Text Endpoint")
-
-Speech-to-Text transforms audio into written transcription, allowing spoken language to be converted into text for various applications.
+<CardGroup>
+  <Card title="Text to Speech" href="/api-reference/apis/voice-cloning/text-to-speech">
+    Transform text content into high-quality speech using advanced TTS technology
+  </Card>
+  <Card title="Voice Cloning" href="/api-reference/apis/voice-cloning/voice-to-voice">
+    Clone and replicate voices from target audio files with precision
+  </Card>
+  <Card title="Speech to Text" href="/api-reference/apis/voice-cloning/speech_to_text" >
+    Convert audio recordings into accurate written transcriptions
+  </Card>
+  <Card title="Vocal Isolator" href="/api-reference/apis/voice-cloning/vocal-isolator" >
+    Extract and isolate vocal tracks from music and audio files
+  </Card>
+  <Card title="Lyrics Generator" href="/api-reference/apis/voice-cloning/lyrics-generator" >
+    Generate creative song lyrics using AI-powered text generation
+  </Card>
+  <Card title="Song Generator" href="/api-reference/apis/voice-cloning/song-generator">
+    Create complete songs with AI-generated music and vocal compositions
+  </Card>
+  <Card title="AI Dubbing" href="/api-reference/apis/voice-cloning/create-dubbing" >
+    Create professional dubbing for videos with synchronized voice replacement
+  </Card>
+  <Card title="Voice Cover Music" href="/api-reference/apis/voice-cloning/voice-cover">
+    Generate cover versions of songs using AI voice synthesis technology
+  </Card>
+  <Card title="Sound Effects" href="/api-reference/apis/voice-cloning/sfx" >
+    Create custom sound effects and audio elements for multimedia projects
+  </Card>
+  <Card title="Music Generation" href="/api-reference/apis/voice-cloning/music-gen" >
+    Generate original music compositions based on textual prompts and styles
+  </Card>
+</CardGroup>
